<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_student_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="568dp"
        android:ems="10"
        android:hint="@string/enter_student_id"
        android:inputType="textLongMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_student_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/student_id"
        app:layout_constraintRight_toLeftOf="@+id/editText_student_id"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_mac_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="500dp"
        android:ems="10"
        android:hint="@string/enter_mac_id"
        android:inputType="textLongMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_mac_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/mac_id"
        app:layout_constraintRight_toLeftOf="@+id/editText_mac_id"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/but_get_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="getTokenOnClick"
        android:text="@string/get_token"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

    <EditText
        android:id="@+id/editText_local_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="400dp"
        android:ems="10"
        android:hint="@string/local_time"
        android:inputType="textLongMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_local_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="410dp"
        android:text="@string/text_local_time"
        app:layout_constraintRight_toLeftOf="@+id/editText_student_id"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_server_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="450dp"
        android:ems="10"
        android:hint="@string/server_time"
        android:inputType="textLongMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_server_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_server_time"
        android:layout_marginTop="460dp"
        app:layout_constraintRight_toLeftOf="@+id/editText_server_time"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_token"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="500dp"
        android:ems="10"
        android:hint="@string/token"
        android:inputType="textLongMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_token"
        android:layout_marginTop="510dp"
        app:layout_constraintRight_toLeftOf="@+id/editText_token"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>